# ChangeLog for dev-util/monodevelop
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.84 2010/10/07 20:29:23 pacho Exp $

  07 Oct 2010; Pacho Ramos <pacho@gentoo.org> -monodevelop-2.0.ebuild,
  -monodevelop-2.1.1.ebuild, -monodevelop-2.2.1.ebuild,
  -monodevelop-2.2.2.ebuild:
  Remove old.

  23 Sep 2010; Markos Chandras <hwoarang@gentoo.org> monodevelop-2.4.ebuild:
  Stable on amd64 wrt bug #336851

  12 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  monodevelop-2.4.ebuild:
  x86 stable wrt bug #336851

  25 Jul 2010; Nirbheek Chauhan <nirbheek@gentoo.org>
  monodevelop-2.0.ebuild, monodevelop-2.1.1.ebuild,
  monodevelop-2.2.1.ebuild, monodevelop-2.2.2.ebuild,
  monodevelop-2.4.ebuild:
  Fix deps for pkgmove from www-client/mozilla-firefox -> www-client/firefox

*monodevelop-2.4 (04 Jul 2010)

  04 Jul 2010; Pacho Ramos <pacho@gentoo.org> +monodevelop-2.4.ebuild:
  Version bump with lots of fixes and new features.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  monodevelop-2.0.ebuild, monodevelop-2.1.1.ebuild,
  monodevelop-2.2.1.ebuild, monodevelop-2.2.2.ebuild:
  dev-util/subversion renamed to dev-vcs/subversion.

*monodevelop-2.2.2 (04 May 2010)

  04 May 2010; Patrick Lauer <patrick@gentoo.org> +monodevelop-2.2.2.ebuild:
  Bump for #317679

  07 Mar 2010; Peter Alfredsen <loki_val@gentoo.org>
  monodevelop-2.2.1.ebuild:
  Only block versions of language-modules <x.y, not <x.y.z

*monodevelop-2.2.1 (21 Feb 2010)

  21 Feb 2010; Patrick Lauer <patrick@gentoo.org> +monodevelop-2.2.1.ebuild:
  Bump

  01 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  monodevelop-2.0.ebuild, monodevelop-2.1.1.ebuild:
  mozilla-firefox-bin -> firefox-bin

*monodevelop-2.1.1 (18 Oct 2009)

  18 Oct 2009; Peter Alfredsen <loki_val@gentoo.org>
  +monodevelop-2.1.1.ebuild:
  Bump to 2.2 Beta 2

*monodevelop-2.0 (30 Mar 2009)
